...
    android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="match_parent"
    tools:context=".LandingPage">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="165dp"
        android:layout_height="28dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
...
